[package]
name = "object-chain"
license = "MIT"
description = "Ad-hoc structure builder"
repository = "https://github.com/bugadani/object-chain/"
version = "0.1.3"
authors = ["Dániel Buga <bugadani@gmail.com>"]
edition = "2018"
categories = ["no-std", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
